tests/ui/nightly/fail-yield-in-macro-stmt.rs
#![feature(coroutines, generator_trait)]
#![deny(deprecated)]

macro_rules! delay {
    ($value:expr) => { () };
}

#[fauxgen::generator]
fn gen() {
    delay!(yield);
}

fn main() {}
